# VulkanRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ConsolidatedCode.txt  PROJECT_OVERVIEW.md  README.md  copyCode.bat  link vulkan needs to be installed.txt  project overview  todo.txt
Project/: CMakeLists.txt  main.cpp  main_preprocessed.txt
Project/Engine/: Camera.cpp  Camera.h  CommandPool.cpp  CommandPool.h  DataBuffer.cpp  DataBuffer.h  DescriptorPool.cpp  DescriptorPool.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  MeshScene.h  ParticleGroup.cpp  ParticleGroup.h  ParticleScene.h  PhysicsManager.cpp  PhysicsManager.h  PhysxBase.cpp  PhysxBase.h  Pipeline.cpp  Pipeline.h  RendererManager.cpp  RendererManager.h  Scene.h  ShaderBase.cpp  ShaderBase.h  SwapChainSupportDetails.h  UniformBufferObject.h  WindowManager.cpp  WindowManager.h  vulkanVars.h
Project/Engine/Core/: Setting.cpp  Settings.h  WindowManager.cpp  WindowManager.h
Project/Engine/GameObjects/: BoxColliderComponent.cpp  BoxColliderComponent.h  Component.h  GameObject.h  ModelMeshComponent.cpp  ModelMeshComponent.h  PlaneColliderComponent.cpp  PlaneColliderComponent.h  PrimitiveMeshComponent.cpp  PrimitiveMeshComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  TransformComponent.h
Project/Engine/Graphics/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DataBuffer.cpp  DataBuffer.h  DebugLineVertex.h  DescriptorPool.cpp  DescriptorPool.h  InstanceData.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  MeshData.h  MeshManager.cpp  MeshManager.h  Particle.h  ParticleGroup.cpp  ParticleGroup.h  Pipeline.cpp  Pipeline.h  RendererManager.cpp  RendererManager.h  ShaderBase.cpp  ShaderBase.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  UniformBufferObject.h  Vertex.h  vulkanVars.h
Project/Engine/Input/: InputManager.cpp  InputManager.h
Project/Engine/Math/: Camera.cpp  Camera.h
Project/Engine/ObjUtils/: DebugPrint.h  ObjUtils.h
Project/Engine/Objects/: BaseObject.h
Project/Engine/Physics/: Collider.h  CollisionDetector.h  PhysicsManager.cpp  PhysicsManager.h  PhysxBase.cpp  PhysxBase.h
Project/Engine/Platform/: PlatformVulkanSurface.h  PlatformWindow.h
Project/Engine/Platform/Linux/: PlatformWindow_Linux.cpp  PlatformWindow_Linux.h  VulkanSurface_Linux.cpp  VulkanSurface_Linux.h
Project/Engine/Platform/Windows/: PlatformWindow_Windows.cpp  PlatformWindow_Windows.h  VulkanSurface_Windows.cpp  VulkanSurface_Windows.h
Project/Engine/Scene/: ChunkGrid.cpp  ChunkGrid.h  GameSceneManager.h  LineScene.h  Mesh.cpp  Mesh.h  MeshData.h  MeshKetUtil.cpp  MeshKeyUtil.h  MeshScene.cpp  MeshScene.h  ParticleScene.h  Scene.h  SceneModelManager.h
Project/Engine/Scene/GameObjects/: BaseObject.h  Component.h  GameObject.h  ModelMeshComponent.cpp  ModelMeshComponent.h  PrimitiveMeshComponent.cpp  PrimitiveMeshComponent.h  TransformComponent.cpp  TransformComponent.h
Project/Engine/UI/: ImGuiLayer.cpp  ImGuiLayer.h
Project/Resources/: SampleResource.txt
Project/labwork/: Week01.cpp  Week02.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
Project/shaders/: computeShader.frag  computeShader.vert  debug_lines.frag  debug_lines.vert  normals.frag  normals.vert  particleShader.vert  pbrShader.frag  pbrShader.vert  postProcess.frag  postProcess.vert  shader3d.frag  shader3d.vert
Project/vulkanbase/: VulkanBase.h  VulkanUtil.cpp  VulkanUtil.h
